--- a/package.json
+++ b/package.json
@@ -3,25 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.3.3",
-    "jquery": "3.3.1",
-    "core-js": "2.6.1",
-    "zone.js": "0.8.26",
-    "bootstrap": "4.2.1",
-    "popper.js": "1.14.6",
-    "@types/node": "8.9.5",
-    "font-awesome": "4.7.0",
-    "@angular/core": "7.1.4",
-    "ngx-bootstrap": "3.1.4",
-    "@angular/forms": "7.1.4",
-    "@types/jasmine": "2.8.14",
     "@angular/common": "7.1.4",
-    "@angular/router": "7.1.4",
     "@angular/compiler": "7.1.4",
-    "@types/jasminewd2": "2.0.6",
+    "@angular/core": "7.1.4",
+    "@angular/forms": "7.1.4",
     "@angular/platform-browser": "7.1.4",
+    "@angular/platform-browser-dynamic": "7.1.4",
+    "@angular/router": "7.1.4",
     "@ng-bootstrap/ng-bootstrap": "4.0.1",
-    "@angular/platform-browser-dynamic": "7.1.4"
+    "@types/jasmine": "2.8.14",
+    "@types/jasminewd2": "2.0.6",
+    "@types/node": "8.9.5",
+    "bootstrap": "4.2.1",
+    "core-js": "2.6.1",
+    "font-awesome": "4.7.0",
+    "jquery": "3.3.1",
+    "moment": "^2.23.0",
+    "ngx-bootstrap": "3.1.4",
+    "popper.js": "1.14.6",
+    "rxjs": "6.3.3",
+    "zone.js": "0.8.26"
   },
   "scripts": {
     "ng": "ng",
